--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-session": "*",
     "node-cache": "*",
     "mysql": "*",
-    "bcrypt-nodejs": "*"
+    "bcrypt-nodejs": "*",
+    "oracledb": "*"
   }
 }
